@@ -1,3 +1,11 @@
+
+2004/04/24: Martin Preuss<martin@libchipcard.de>
+------------------------------------------------
+- added base module "args" which transforms command line arguments to
+  a GWEN_DB. It performs some checks on the arguments given and makes it
+  easier to create help screens.
+
+
 2004-04-16  Christian Stimming <stimming@tuhh.de>
 
 	* src/base/debug.c: Fix DBG_* functions that are the replacements
